# NBA_Data

./: NBA Model.drawio  nba_data.travis.yml  pyproject.toml  setup.py
NBA_Data_Pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Notebook/: Final Plot.ipynb  Final Recommendation.ipynb
Notebook/.ipynb_checkpoints/: Final Model-checkpoint.ipynb  Final Plot-checkpoint.ipynb
extraction/: games_extract.py  players_extract.py  stats_extract.py  teams_extract.py
job/: save_clean_game.py  save_clean_player.py  save_clean_stats.py  save_clean_team.py  save_extract_games.py  save_extract_players.py  save_extract_stats.py  save_extract_teams.py  save_load_game.py  save_model.py
load/: load.py  load_teams.py
model/: ml_model.py  preprocess.py
model/pickle_file/: model.pkl
resources/clean_data/deployment/: .part-00000-eb60afbc-4735-4328-af5d-421db8b54585-c000.csv.crc  deployment.csv
resources/clean_data/team/: clean_team.csv  (+1 more)
scripts/: run_test_game.sh  run_test_players.sh  run_test_stats.sh  run_test_team.sh
scripts/extract_script/: run_extract_game.sh  run_extract_player.sh  run_extract_stats.sh  run_extract_team.sh
scripts/load_script/: run_load_game.sh
scripts/model_script/: run_model_script.sh
scripts/transform_script/: run_game_script.sh  run_players_script.sh  run_stats_script.sh  run_team_script.sh
tests/: test_games_transform.py  test_players_transform.py  test_stats_transform.py  test_teams_transform.py
transformations/: games_transform.py  players_transform.py  stats_transform.py  teams_transform.py
visuals/: spider.py
(+10 files in other folders)
